--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="project.css"
 </head>
 <body>
+
+    <header>
+        <h2>list</h2>
+        <span class="c-tasks-count">0</span>
+        <span class="c-tasks-done">0</span>
+    </header>
+
+    <div class="container">
+        <h1>Name List</h1>
+        <form>
+            <input type="text" placeholder="New Task">
+            <button type="submit">Add</button>
+        </form>
     
-    <button>
-    <span></span>
-    <span></span>
-    <span></span>
-    </button>
-
-    <nav>
-        <ul>
-            <li><a href="https://www.instagram.com/">instagram</a></li>
-            <li><a href="https://www.facebook.com/">facebook</a></li>
-            <li><a href="https://www.youtube.com/">youtube</a></li>
-        </ul>
-    </nav>
-
+        <div class="tasks-empty"></div>
+        <ul class="list"></ul>
     
-
-    <script src="project.js"></script>
+    </div>
+    <script src="main.js" ></script>
 </body>
 </html>
